--- a/test/integration/filters/BUILD
+++ b/test/integration/filters/BUILD
@@ -4,15 +4,9 @@ load(
     "//bazel:envoy_build_system.bzl",
     "envoy_cc_test_library",
     "envoy_package",
-    "envoy_proto_library",
 )
 
 envoy_package()
-
-envoy_proto_library(
-    name = "sleeping_filter_proto",
-    srcs = ["sleeping_filter.proto"],
-)
 
 envoy_cc_test_library(
     name = "add_trailers_filter_config_lib",
@@ -101,13 +95,11 @@ envoy_cc_test_library(
 )
 
 envoy_cc_test_library(
-    name = "sleeping_filter_lib",
-    srcs = ["sleeping_filter.cc"],
+    name = "hanging_filter_lib",
+    srcs = ["hanging_filter.cc"],
     deps = [
-        ":sleeping_filter_proto_cc",
         "//include/envoy/registry",
         "//source/extensions/filters/http/common:factory_base_lib",
         "//source/extensions/filters/http/common:pass_through_filter_lib",
-        "//test/test_common:test_time_system_interface",
     ],
 )
