--- a/.bazelrc
+++ b/.bazelrc
@@ -49,5 +49,12 @@ build:clang-msan --define tcmalloc=disabled
 build:clang-msan --copt -fsanitize-memory-track-origins=2
 build:clang-msan --linkopt -fuse-ld=lld
 
+# Clang with libc++
+build:libc++ --action_env=CC=clang-7
+build:libc++ --action_env=CXX=clang++-7
+build:libc++ --action_env=CXXFLAGS=-stdlib=libc++
+build:libc++ --define force_libcpp=enabled
+build:libc++ --linkopt -fuse-ld=lld
+
 # Test options
 test --test_env=HEAPCHECK=normal --test_env=PPROF_PATH
