--- a/test/extensions/tracers/opencensus/BUILD
+++ b/test/extensions/tracers/opencensus/BUILD
@@ -13,6 +13,17 @@ load(
 envoy_package()
 
 envoy_extension_cc_test(
+    name = "tracer_test",
+    srcs = ["tracer_test.cc"],
+    extension_name = "envoy.tracers.opencensus",
+    deps = [
+        "//source/extensions/tracers/opencensus:opencensus_tracer_impl",
+        "//test/mocks/http:http_mocks",
+        "//test/mocks/tracing:tracing_mocks",
+    ],
+)
+
+envoy_extension_cc_test(
     name = "config_test",
     srcs = ["config_test.cc"],
     extension_name = "envoy.tracers.opencensus",
