Add overload action to try shrink the heap
Signed-off-by: Elisha Ziskind <eziskind@google.com>

--- a/source/common/memory/BUILD
+++ b/source/common/memory/BUILD
@@ -14,3 +14,22 @@ envoy_cc_library(
     hdrs = ["stats.h"],
     tcmalloc_dep = 1,
 )
+
+envoy_cc_library(
+    name = "utils_lib",
+    srcs = ["utils.cc"],
+    hdrs = ["utils.h"],
+    tcmalloc_dep = 1,
+)
+
+envoy_cc_library(
+    name = "heap_shrinker_lib",
+    srcs = ["heap_shrinker.cc"],
+    hdrs = ["heap_shrinker.h"],
+    deps = [
+        ":utils_lib",
+        "//include/envoy/event:dispatcher_interface",
+        "//include/envoy/server:overload_manager_interface",
+        "//include/envoy/stats:stats_interface",
+    ],
+)
