--- a/test/test_common/BUILD
+++ b/test/test_common/BUILD
@@ -159,11 +159,18 @@ envoy_cc_test(
 )
 
 envoy_cc_test_infrastructure_library(
-    name = "test_base_lib",
-    srcs = ["test_base.cc"],
+    name = "test_base",
     hdrs = ["test_base.h"],
     deps = [
         "//test/test_common:global_lib",
+    ],
+)
+
+envoy_cc_test(
+    name = "test_base_test",
+    srcs = ["test_base_test.cc"],
+    deps = [
+        ":test_base",
     ],
 )
 
