fixup: break out integer and fractional portions of initial requests to separate fields
Signed-off-by: Michael Puncel <mpuncel@squareup.com>

--- a/api/envoy/api/v2/route/BUILD
+++ b/api/envoy/api/v2/route/BUILD
@@ -8,6 +8,7 @@ api_proto_library_internal(
     visibility = ["//envoy/api/v2:friends"],
     deps = [
         "//envoy/api/v2/core:base",
+        "//envoy/type:percent",
         "//envoy/type:range",
     ],
 )
