--- a/test/common/runtime/BUILD
+++ b/test/common/runtime/BUILD
@@ -32,6 +32,18 @@ envoy_cc_test(
 )
 
 envoy_cc_test(
+    name = "runtime_flag_override_test",
+    srcs = ["runtime_flag_override_test.cc"],
+    args = [
+        "--runtime-feature-override-for-tests=envoy.reloadable_features.test_feature_false",
+    ],
+    coverage = False,
+    deps = [
+        "//source/common/runtime:runtime_lib",
+    ],
+)
+
+envoy_cc_test(
     name = "uuid_util_test",
     srcs = ["uuid_util_test.cc"],
     deps = [
