Address review feedback Add helper method to dump tcmalloc stats to envoy log Improve unit test to check that heap is actually shrunk
Signed-off-by: Elisha Ziskind <eziskind@google.com>

--- a/test/common/memory/BUILD
+++ b/test/common/memory/BUILD
@@ -20,6 +20,7 @@ envoy_cc_test(
     deps = [
         "//source/common/event:dispatcher_lib",
         "//source/common/memory:heap_shrinker_lib",
+        "//source/common/memory:stats_lib",
         "//source/common/stats:isolated_store_lib",
         "//test/mocks/event:event_mocks",
         "//test/mocks/server:server_mocks",
