--- a/ci/build_container/Dockerfile-centos
+++ b/ci/build_container/Dockerfile-centos
@@ -8,5 +8,5 @@ COPY ./build_recipes/*.sh /build_recipes/
 
 COPY ./build_container_centos.sh /
 
-ENV PATH /opt/rh/rh-git218/root/usr/bin:/opt/rh/devtoolset-7/root/usr/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ENV PATH /opt/rh/rh-git218/root/usr/bin:/opt/rh/devtoolset-7/root/usr/bin:/opt/llvm/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 RUN ./build_container_centos.sh
