--- a/test/integration/BUILD
+++ b/test/integration/BUILD
@@ -221,6 +221,8 @@ envoy_cc_test_library(
         "//test/integration/filters:add_trailers_filter_config_lib",
         "//test/integration/filters:call_decodedata_once_filter_config_lib",
         "//test/integration/filters:decode_headers_return_stop_all_filter_config_lib",
+        "//test/integration/filters:decode_headers_return_stop_all_filter_2_config_lib",
+        "//test/integration/filters:decode_headers_return_stop_all_watermark_filter_config_lib",
         "//test/integration/filters:headers_only_filter_config_lib",
         "//test/integration/filters:passthrough_filter_config_lib",
         "//test/integration/filters:pause_filter_lib",
