--- a/test/extensions/filters/http/tap/BUILD
+++ b/test/extensions/filters/http/tap/BUILD
@@ -2,7 +2,7 @@ licenses(["notice"])  # Apache 2
 
 load(
     "//bazel:envoy_build_system.bzl",
-    "envoy_cc_library",
+    "envoy_cc_test_library",
     "envoy_package",
 )
 load(
@@ -12,7 +12,7 @@ load(
 
 envoy_package()
 
-envoy_cc_library(
+envoy_cc_test_library(
     name = "common",
     hdrs = ["common.h"],
     deps = [
