--- a/source/extensions/filters/network/common/redis/BUILD
+++ b/source/extensions/filters/network/common/redis/BUILD
@@ -35,3 +35,55 @@ envoy_cc_library(
     ],
 )
 
+envoy_cc_library(
+    name = "command_splitter_interface",
+    hdrs = ["command_splitter.h"],
+    deps = [
+        ":codec_interface",
+    ],
+)
+
+envoy_cc_library(
+    name = "conn_pool_interface",
+    hdrs = ["conn_pool.h"],
+    deps = [
+        ":codec_interface",
+        "//include/envoy/upstream:cluster_manager_interface",
+    ],
+)
+
+envoy_cc_library(
+    name = "command_splitter_lib",
+    srcs = ["command_splitter_impl.cc"],
+    hdrs = ["command_splitter_impl.h"],
+    deps = [
+        ":supported_commands_lib",
+        ":command_splitter_interface",
+        ":conn_pool_interface",
+        "//include/envoy/stats:stats_macros",
+        "//include/envoy/stats:timespan",
+        "//source/common/common:assert_lib",
+        "//source/common/common:minimal_logger_lib",
+        "//source/common/common:to_lower_table_lib",
+        "//source/common/common:utility_lib",
+    ],
+)
+
+envoy_cc_library(
+    name = "conn_pool_lib",
+    srcs = ["conn_pool_impl.cc"],
+    hdrs = ["conn_pool_impl.h"],
+    deps = [
+        ":codec_lib",
+        ":conn_pool_interface",
+        "//include/envoy/router:router_interface",
+        "//include/envoy/thread_local:thread_local_interface",
+        "//include/envoy/upstream:cluster_manager_interface",
+        "//source/common/buffer:buffer_lib",
+        "//source/common/common:assert_lib",
+        "//source/common/network:filter_lib",
+        "//source/common/protobuf:utility_lib",
+        "//source/common/upstream:load_balancer_lib",
+        "@envoy_api//envoy/config/filter/network/redis_proxy/v2:redis_proxy_cc", # TODO: WTF is this?
+    ],
+)
