--- a/.bazelrc
+++ b/.bazelrc
@@ -15,6 +15,8 @@ build:asan --linkopt -fsanitize=address,undefined
 build:asan --copt -fno-sanitize=vptr
 # TODO(htuch): these are temporary workarounds, remove when
 # https://github.com/bazelbuild/rules_foreign_cc/issues/154#issuecomment-466504751 is resolved.
+build:asan --action_env=CC
+build:asan --action_env=CXX
 build:asan --action_env=CFLAGS="-fsanitize=address,undefined -fno-sanitize=vptr"
 build:asan --action_env=CXXFLAGS="-fsanitize=address,undefined -fno-sanitize=vptr"
 build:asan --linkopt -fno-sanitize=vptr
@@ -42,6 +44,8 @@ build:clang-tsan --define ENVOY_CONFIG_TSAN=1
 build:clang-tsan --copt -fsanitize=thread
 # TODO(htuch): these are temporary workarounds, remove when
 # https://github.com/bazelbuild/rules_foreign_cc/issues/154#issuecomment-466504751 is resolved.
+build:clang-tsan --action_env=CC
+build:clang-tsan --action_env=CXX
 build:clang-tsan --action_env=CFLAGS="-fsanitize=thread"
 build:clang-tsan --action_env=CXXFLAGS="-fsanitize=thread"
 build:clang-tsan --linkopt -fsanitize=thread
