--- a/include/envoy/filesystem/BUILD
+++ b/include/envoy/filesystem/BUILD
@@ -14,6 +14,7 @@ envoy_cc_library(
     deps = [
         "//include/envoy/api:os_sys_calls_interface",
         "//include/envoy/event:dispatcher_interface",
+        "//source/common/filesystem:io_file_error_lib",
     ],
 )
 
