--- a/.bazelrc
+++ b/.bazelrc
@@ -42,11 +42,13 @@ build:macos-asan --copt -D_FORTIFY_SOURCE=0
 # Clang TSAN
 build:clang-tsan --define ENVOY_CONFIG_TSAN=1
 build:clang-tsan --copt -fsanitize=thread
+# This is needed because of https://github.com/libevent/libevent/issues/777
+build:clang-tsan --copt -DEVENT__DISABLE_DEBUG_MODE
 # TODO(htuch): these are temporary workarounds, remove when
 # https://github.com/bazelbuild/rules_foreign_cc/issues/154#issuecomment-466504751 is resolved.
 build:clang-tsan --action_env=CC
 build:clang-tsan --action_env=CXX
-build:clang-tsan --action_env=CFLAGS="-fsanitize=thread"
+build:clang-tsan --action_env=CFLAGS="-fsanitize=thread -DEVENT__DISABLE_DEBUG_MODE"
 build:clang-tsan --action_env=CXXFLAGS="-fsanitize=thread"
 build:clang-tsan --linkopt -fsanitize=thread
 build:clang-tsan --define tcmalloc=disabled
