--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ BROWSE
 /build
 /build_*
 .cache
+.classpath
 /ci/bazel-*
 /ci/prebuilt/thirdparty
 /ci/prebuilt/thirdparty_build
@@ -11,9 +12,12 @@ cscope.*
 .deps
 /docs/landing_source/.bundle
 /generated
+.idea/
+.project
 *.pyc
 **/pyformat
 SOURCE_VERSION
+.settings/
 *.sw*
 tags
 TAGS
@@ -22,4 +26,3 @@ TAGS
 .vimrc
 .vs
 .vscode
-.idea/
