--- a/test/extensions/common/tap/BUILD
+++ b/test/extensions/common/tap/BUILD
@@ -11,6 +11,7 @@ envoy_package()
 
 envoy_cc_test_library(
     name = "common",
+    srcs = ["common.cc"],
     hdrs = ["common.h"],
     deps = [
         "//source/extensions/common/tap:tap_interface",
