--- a/source/common/stats/BUILD
+++ b/source/common/stats/BUILD
@@ -13,6 +13,7 @@ envoy_cc_library(
     srcs = ["heap_stat_data.cc"],
     hdrs = ["heap_stat_data.h"],
     deps = [
+        ":metric_impl_lib",
         ":stat_data_allocator_lib",
         "//source/common/common:assert_lib",
         "//source/common/common:hash_lib",
@@ -42,7 +43,9 @@ envoy_cc_library(
     srcs = ["isolated_store_impl.cc"],
     hdrs = ["isolated_store_impl.h"],
     deps = [
+        ":fake_symbol_table_lib",
         ":histogram_lib",
+        ":scope_prefixer_lib",
         ":stats_lib",
         ":stats_options_lib",
         "//include/envoy/stats:stats_macros",
@@ -52,8 +55,10 @@ envoy_cc_library(
 
 envoy_cc_library(
     name = "metric_impl_lib",
+    srcs = ["metric_impl.cc"],
     hdrs = ["metric_impl.h"],
     deps = [
+        ":symbol_table_lib",
         "//include/envoy/stats:stats_interface",
         "//source/common/common:assert_lib",
     ],
@@ -70,6 +75,17 @@ envoy_cc_library(
         "//source/common/common:block_memory_hash_set_lib",
         "//source/common/common:hash_lib",
         "//source/common/common:thread_lib",
+    ],
+)
+
+envoy_cc_library(
+    name = "scope_prefixer_lib",
+    srcs = ["scope_prefixer.cc"],
+    hdrs = ["scope_prefixer.h"],
+    deps = [
+        ":symbol_table_lib",
+        ":utility_lib",
+        "//include/envoy/stats:stats_interface",
     ],
 )
 
@@ -191,6 +207,7 @@ envoy_cc_library(
     hdrs = ["thread_local_store.h"],
     deps = [
         ":heap_stat_data_lib",
+        ":scope_prefixer_lib",
         ":stats_lib",
         ":stats_matcher_lib",
         ":tag_producer_lib",
@@ -202,4 +219,5 @@ envoy_cc_library(
     name = "utility_lib",
     srcs = ["utility.cc"],
     hdrs = ["utility.h"],
+    deps = [":symbol_table_lib"],
 )
